# wallter

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml
android/: .gitignore  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/wallter/app/: MainActivity.kt  MainViewModel.kt  WallterRoot.kt
android/app/src/main/java/com/wallter/app/ble/: WallterBleClient.kt  WallterStatus.kt  WallterUuids.kt
android/app/src/main/java/com/wallter/app/ui/: WallterApp.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
components/cytron_md/: CMakeLists.txt  cytron_md.cpp  cytron_md.hpp  cytron_md_demo.h  demo.cpp
components/espidf_lcd/: CMakeLists.txt  demo.cpp  demo.hpp  rgb_lcd_idf.cpp  rgb_lcd_idf.hpp
main/: CMakeLists.txt  Kconfig.projbuild  accel.cpp  accel.hpp  angle_utils.hpp  app_config.hpp  ble_ota.cpp  ble_ota.hpp  boards.h  bridge.cpp  bridge.hpp  buttons.cpp  buttons.hpp  calibration_store.cpp  calibration_store.hpp  commands.hpp  display.hpp  display_rgb.cpp  factory_test.cpp  factory_test.hpp  idf_component.yml  inputs.cpp  inputs.hpp  logbuf.cpp  logbuf.hpp  main.c  main.cpp  modes.cpp  modes.hpp  motor_control.cpp  motor_control.hpp  motordriver.hpp  motordriver_cytron.cpp  ota_update.cpp  ota_update.hpp  util.cpp  util.hpp
old_kiltertilter/: display.cpp  kiltertilter.ino
src/: main_esp32.cpp
